--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
     "@nguniversal/builders": "^12.0.1",
+    "@types/bootstrap": "^5.0.16",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
