Add lisence.txt to build file

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/license.txt"
             ],
             "styles": [
               "src/styles.scss",
