--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css"
             ],
             "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "serviceWorker": true,
