--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "~12.0.3",
     "@angular/service-worker": "~12.0.3",
     "@nguniversal/express-engine": "^12.0.1",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "express": "^4.15.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
