--- a/angular.json
+++ b/angular.json
@@ -35,14 +35,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css",
-              "src/styles/main.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css"
             ],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/styles"
-              ]
-            },
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
